# eth-offline-signer

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: integration-tests.yml  static-analysis.yml  testnet-send.yml  unit-tests.yml
docs/: cli.md
src/: confirm.rs  lib.rs  main.rs  offline_sign.rs  rpc_submit.rs  sign.rs  submit.rs
tests/: cli_integration.rs
