[package]
name = "eth-offline-signer"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.45", features = ["macros", "rt"] }
dotenv = "0.15"
thiserror = "2.0"
color-eyre = "0.6"
hex = "0.4"

[dev-dependencies]
proptest = "1.6"
serde_json = "1.0"
