[package]
name = "eth-offline-signer"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
clap-markdown = "0.1"
tokio = { version = "1.45", features = ["macros", "rt", "rt-multi-thread"] }
dotenv = "0.15"
thiserror = "2.0"
color-eyre = "0.6"
displaydoc = "0.2"
hex = "0.4"
url = "2.5"

[dev-dependencies]
alloy = { version = "1.0", features = ["node-bindings"] }
proptest = "1.6"
serde_json = "1.0"
